--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -33,7 +33,7 @@
 				</span>
 		
 				<h1 style="color: yellow; font-size:30px;" class=" pl-4" >
-					I'm Saif ur rehman
+					I'm Saif ur
 				</h1>
 		
 				<span  class="pl-4 text-white">Freelance web Designer </br><span class="pl-4"> & Developer</br></span>
