--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -74,7 +74,7 @@
 				<span class="" style="border-bottom: 2px solid yellow">Abo</span>ut Me
 			</h1>
 
-			<p class="text-justify pt-3 text-white" style="font-size: 13px;">Hey, this is my homepage, so I have to say something about myself. Sometimes it is hard to introduce yourself because you know yourself so well that you do not know where to start with. Let me give a try to see what kind of image you have about me through my self-description. I hope that my impression about myself and your impression about me are not so different. Here it goes.
+			<p class="text-justify pt-3 text-white" style="font-size: 13px;">Hey, This is Saif ur rehman and i am Developer. I am from Pakistan. I am web Developer and web site Designer. Web Development and web site design is my passion. I design so many website.  
 			</p>
 
 			<a class="btn btn-warning" href="cv/saifcv.docx" download>Download Cv</a>
